// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataPicker renders with defaultProps 1`] = `
<div
  className="ax-panel ax-panel--inactive ax-theme--day"
  style={
    Object {
      "minHeight": undefined,
    }
  }
>
  Lorem Ipsum
</div>
`;

exports[`DataPicker renders with value 1`] = `
<div
  className="ax-panel ax-theme--day"
  style={
    Object {
      "minHeight": undefined,
    }
  }
>
  Lorem Ipsum
</div>
`;
